part1/1.4/app5 (pingpong Logoutput)/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-logoutput
  template:
    metadata:
      labels:
        app: pingpong-logoutput
    spec:
      volumes:
        - name: shared-pingpong-logoutput
          persistentVolumeClaim:
            claimName: pingpong-logoutput-claim
      containers:
        - name: pingpong-vol
          image: muhakka/pingpong-vol:latest
          volumeMounts:
          - name: shared-pingpong-logoutput
            mountPath: /usr/src/app/files
        - name: logoutput-vol
          image: muhakka/logoutput-vol:latest
          volumeMounts:
          - name: shared-pingpong-logoutput
            mountPath: /usr/src/app/files
