part1/1.4/app5 (pingpong Logoutput)/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong-logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
